src/App.css
@font-face {
    font-family: Grenadier;
    src: url(./fonts/GrenadierNF.otf);
}

html {
    height: 100%;
    background: url(images/jazz2.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

body {
    font-family: "Poiret One", cursive;
    min-height: 100%;
    position: relative;
}

.header {
    height: 8em;
    display: flex;
    color: rgb(212, 61, 40);
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    background-color: rgb(22, 22, 22);
}

.header h1 {
    font-family: Grenadier;
    flex: 1;
    text-align: center;
    font-size: 6.4em;
    font-weight: bold34;
    text-shadow: 2px 8px 10px rgb(114, 10, 10);
}

.footer {
    color: rgba(212, 61, 40, 1);
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.9);
    position: absolute;
    bottom: 0;
    height: 4em;
}

.bigger {
    margin-top: -0.2em;
    font-size: 1.5em;
}

.spacer {
    height: 5em;
}

.year {
    text-align: center;
}

.email,
.icon {
    flex: 0;
    text-decoration: none;
    color: rgb(212, 61, 40);
    font-size: 1.2em;
}

.email:hover,
.icon:hover {
    color: blue;
}

.gallery_main {
    display: flex;
    min-width: 100%;
    max-height: 600px;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.pic_display {
    flex: 6;
    width: inherit;
    max-height: 100%;
}

.pic_display>img {
    max-width: 100%;
    height: 100%;
}

.left,
.right {
    flex: 1;
    font-size: 3em;
    color: gray;
}

.left:hover,
.right:hover {
    user-select: none;
    cursor: pointer;
    color: black;
}

.songs {
    height: 592px;
    -webkit-column-count: 2;
    -moz-column-count: 2;
    column-count: 2;
    -webkit-column-gap: 1.5em;
    column-gap: 1.5em;
    -moz-column-gap: 1.5em;
    overflow: auto;
    padding: 0.5em;
    align-items: center;
    flex: 1;
}

.songs ul {
    text-indent: -1em;
    margin-left: 1em;
    list-style-type: none;
    text-align: left;
    flex-direction: column;
    padding: 0.1em;
}

.viewer_center {
    margin: auto;
    flex: 1;
    justify-content: center;
    text-align: center;
    padding: 0 1em;
    overflow: auto;
}

ul li:first-child {
    margin-top: -1em;
}

.navBar {
    font-family: "Poiret One", cursive;
    /* background-color: black; */
    background-color: rgba(73, 107, 130, 0.9);
    width: 7em;
    height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: left;
    border-radius: 0 0 25px 0;
    box-shadow: 0px 5px 10px;
}

.navButton {
    font-size: 1.3em;
    background-color: #dba834;
    box-sizing: content-box;
    text-align: center;
    width: 3.8em;
    padding: 0.5em 0.7em 0.5em 0.3em;
    border-radius: 0 0 25px 0;
    font-weight: bold;
    transition: width 0.5s;
    transition-timing-function: linear;
}

.navButton:hover {
    cursor: pointer;
    box-shadow: 0px 5px 3px gray;
    width: 4.38em;
}

.mainWrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.viewer {
    font-size: 1.2em;
    display: flex;
    font-family: Arial, Helvetica, sans-serif;
    color: black;
    background-color: rgba(255, 255, 255, 0.8);
    box-sizing: border-box;
    height: 600px;
    flex: 1;
    margin: 0em 3em;
    border-radius: 0 0 25px 25px;
    text-align: center;
    box-shadow: 0px 5px 10px;
}

.cal_list {
    list-style-position: inside;
    list-style-type: none;
    padding: 0em;
}

.all_pictures {
    width: 10em;
    height: 10em;
    flex-basis: content;
    background-size: cover;
}

.Tim {
    background: url(./images/tim.png);
    border-radius: 0 0 0 10px;
    box-shadow: 0px 5px 10px;
}

.Paul {
    background: url(./images/paul.jpg);
    border-radius: 10px 0 0 10px;
    box-shadow: 0px 5px 10px;
}

.bass {
    background: url(./images/bass.png);
    border-radius: 10px 0 0 10px;
    box-shadow: 0px 5px 10px;
}

.pictures {
    background-size: cover;
    width: 10em;
    justify-content: space-between;
    display: flex;
    flex-direction: column;
    opacity: 0.94;
    border-radius: 10px 0 0 10px;
}

@media screen and (min-width: 300px) and (max-width: 399px) {
    .header {
        height: 5em;
    }
    .header h1 {
        font-size: 2.5em;
    }
    .navBar {
        flex: 1;
        width: 100%;
        height: 2em;
        flex-direction: row;
        border-radius: 0;
        box-shadow: none;
    }
    .navButton {
        font-size: 0.7em;
        width: 3.5em;
        height: 1.5em;
        border-radius: 0 0 5px 0;
        font-weight: bold;
    }
    .navButton:hover {
        width: 4em;
        box-shadow: 0px 5px 5px gray;
    }
    .viewer {
        width: 320px;
        flex: 1;
        margin: auto;
    }
    .mainWrapper {
        width: 100%;
        flex-direction: column;
    }
    .footer {
        font-size: 0.6em;
    }
    .spacer {
        height: 6em;
    }
    .pictures {
        justify-content: space-between;
        align-items: center;
        height: 12em;
        width: 320px;
        margin: auto;
        border-radius: 15px;
        flex-direction: row;
    }
    .all_pictures {
        background-size: cover;
        height: 6em;
        width: 6em;
        border-radius: 15px;
    }
}

@media screen and (min-width: 400px) and (max-width: 500px) {
    .header {
        height: 5em;
    }
    .header h1 {
        font-size: 3em;
    }
    .navBar {
        flex: 1;
        width: 100%;
        height: 2em;
        flex-direction: row;
        border-radius: 0;
        box-shadow: none;
    }
    .navButton {
        font-size: 0.7em;
        width: 3.5em;
        height: 1.5em;
        border-radius: 0 0 5px 0;
        font-weight: bold;
    }
    .navButton:hover {
        width: 4em;
        box-shadow: 0px 5px 5px gray;
    }
    .viewer {
        width: 370px;
        flex: 1;
        margin: auto;
    }
    .viewer img {
        width: 100%;
        justify-content: center;
        align-content: center;
    }
    .mainWrapper {
        width: 100%;
        flex-direction: column;
    }
    .footer {
        font-size: 0.8em;
    }
    .spacer {
        height: 6em;
    }
    .pictures {
        justify-content: space-between;
        align-items: center;
        height: 12em;
        width: 370px;
        margin: auto;
        border-radius: 15px;
        flex-direction: row;
    }
    .all_pictures {
        background-size: cover;
        height: 7em;
        width: 7em;
        border-radius: 15px;
    }
}

@media (min-width: 501px) and (max-width: 768px) {
    .header h1 {
        font-size: 4em;
    }
    .navBar {
        flex: 1;
        width: 100%;
        height: 2em;
        flex-direction: row;
        border-radius: 0;
        box-shadow: none;
    }
    .navButton {
        font-size: 0.9em;
        padding: 0.3em 0.7em;
        width: 3.5em;
        height: 1.5em;
        border-radius: 0 0 5px 0;
        font-weight: bold;
    }
    .navButton:hover {
        width: 4em;
        box-shadow: 0px 5px 5px gray;
    }
    .viewer {
        width: 95%;
        margin: auto;
    }
    .viewer img {
        width: 100%;
        display: flex;
        justify-content: center;
        align-content: center;
    }
    .mainWrapper {
        flex-direction: column;
    }
    .pictures {
        justify-content: space-between;
        align-items: center;
        height: 12em;
        width: 95%;
        margin: auto;
        border-radius: 15px;
        flex-direction: row;
    }
    .all_pictures {
        height: 9em;
        width: 9em;
        border-radius: 15px;
        background-size: cover;
    }
    .gallery_main {
        flex-direction: column;
    }
}

@media (min-width: 1200px) {
    .viewer_center {
        padding: 0 4em;
    }
}

